--- a/Controller/controller/Controller.vbproj
+++ b/Controller/controller/Controller.vbproj
@@ -72,6 +72,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Car.vb" />
     <Compile Include="ConnectedClient.vb" />
     <Compile Include="Controller.vb" />
     <Compile Include="MainWindow.vb">
@@ -99,6 +100,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Server.vb" />
+    <Compile Include="TrafficLight.vb" />
+    <Compile Include="TrafficLightComponent.vb" />
+    <Compile Include="TrafficLightGroup.vb" />
+    <Compile Include="Vehicle.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainWindow.resx">
