--- a/Simulator/Simulator/Simulator.csproj
+++ b/Simulator/Simulator/Simulator.csproj
@@ -55,6 +55,8 @@
     </ApplicationDefinition>
     <Compile Include="Classes\DynamicObject.cs" />
     <Compile Include="Dijkstra\DijkstraCalculationHandler.cs" />
+    <Compile Include="Dijkstra\TrafficLights\NotificationNode.cs" />
+    <Compile Include="Dijkstra\TrafficLights\TrafficLight.cs" />
     <Compile Include="Logic\LogHandler.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
