--- a/Simulator/Simulator/Simulator.csproj
+++ b/Simulator/Simulator/Simulator.csproj
@@ -57,8 +57,10 @@
     <Compile Include="Classes\DynamicObject.cs" />
     <Compile Include="Dijkstra\DijkstraCalculationHandler.cs" />
     <Compile Include="Dijkstra\LaneSwitcher.cs" />
+    <Compile Include="Dijkstra\LaneSwitchNode.cs" />
     <Compile Include="Dijkstra\TrafficLights\NotificationNode.cs" />
     <Compile Include="Dijkstra\TrafficLights\TrafficLight.cs" />
+    <Compile Include="Dijkstra\TrafficLights\TrafficLightWaitNode.cs" />
     <Compile Include="Logic\LogHandler.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
