--- a/Controller/controller/My Project/Settings.settings
+++ b/Controller/controller/My Project/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="AutoClearLog" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="MinimumBusStateDelay" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">3</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
