--- a/Simulator/Simulator/Simulator.csproj
+++ b/Simulator/Simulator/Simulator.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Dijkstra\TrafficLights\NotificationNode.cs" />
     <Compile Include="Dijkstra\TrafficLights\TrafficLight.cs" />
     <Compile Include="Dijkstra\TrafficLights\TrafficLightWaitNode.cs" />
+    <Compile Include="Logic\Building.cs" />
     <Compile Include="Logic\LogHandler.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
